# maestro

./: .env.example  .gitignore  .release_names.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-agent  Dockerfile-cli  MAINTAINERS.md  README.md  SECURITY.md  TODO_REPORT.md  beeAI  example.env  maestro  pyproject.toml  requirements-extra.txt  requirements.txt  start.sh  stop.sh  workflow_schema.json
bee-hive/: Dockerfile  README.md  agent_schema.json  api.py  bee-hive.html  bee-hive.sh  bee-hive.yaml  beeAI  create_agents.py  entrypoint.sh  maestro  pyproject.toml  requirements.txt  run_workflow.py
bee-hive/bee_hive/: __init__.py  agent.py  agent_factory.py  bee_agent.py  create_agents.py  crewai_agent.py  mock_agent.py  step.py  workflow.py
bee-hive/cli/: __init__.py  beeAI.py  cli.py  commands.py  common.py  maestro.py  test_commands.py  test_create_command.py  test_deploy_command.py  test_run_command.py  test_validate_command.py
bee-hive/tests/bee/: agents.yaml  test_bee.py  workflow.yaml
bee-hive/tests/crewai/: agents.yaml  crew_dummy.py  test_crewai.py  workflow.yaml
bee-hive/tests/workflow/: test_sequence.py  workflow.yaml
framework/bee-py/: README.md  pyproject.toml
framework/bee-py/bee_agent/: __init__.py
framework/bee-py/bee_agent/agents/: agent.py  runner.py
framework/bee-py/bee_agent/llms/: base_output.py  llm.py  output.py  prompt.py
framework/bee-py/bee_agent/memory/: __init__.py  base_cache.py  base_memory.py  exceptions.py  file_cache.py  message.py  readonly_memory.py  serializable.py  serializer.py  sliding_cache.py  sliding_memory.py  summarize_memory.py  task_map.py  token_memory.py  unconstrained_cache.py  unconstrained_memory.py
framework/bee-py/bee_agent/tools/: __init__.py  mcp_tools.py  tool.py  weather.py  wikipedia.py
framework/bee-py/bee_agent/utils/: __init__.py  config.py  custom_logger.py  events.py  roles.py
framework/bee-py/dev_tools/: scripts.py
framework/bee-py/tests/: conftest.py
maestro/: Dockerfile  README.md  maestro-cli  maestro.sh  maestroCLI  pyproject.toml  run_workflow.py
maestro/cli/: __init__.py  cli.py  commands.py  common.py  maestro.py  maestroCLI.py  streamlit_deploy.py  streamlit_meta_agents_deploy.py  streamlit_redirect.py  streamlit_workflow_ui.py  test_commands.py
maestro/demos/: CONTRIBUTING.md  README.md
maestro/demos/demos/activity-planner.ai/: doctor.sh  run.sh
maestro/demos/workflows/activity-planner-crewai.ai/: README.md  agents.yaml  run.py  run.sh  test.sh  workflow.yaml
maestro/demos/workflows/activity-planner.ai/: README.md  agents.yaml  doctor.sh  example.env  local_agent.yaml  test.sh  workflow.md  workflow.yaml
maestro/demos/workflows/common/: doctor.sh  test.sh
maestro/demos/workflows/ibm-summary.ai/: agents.yaml  run.sh
maestro/demos/workflows/meta-agents/: README.md
maestro/demos/workflows/meta-agents-weather.ai/: README.md  agents.yaml  workflow.yaml
maestro/demos/workflows/meta-workflow-weather.ai/: README.md  agents.yaml
maestro/demos/workflows/openai-mcp.ai/: README.md  agents.yaml
maestro/demos/workflows/summary.ai/: README.md  agents.yaml  doctor.sh  run.sh  test.sh  workflow.yaml
maestro/demos/workflows/weather-checker.ai/: README.md  agents.yaml  doctor.sh  example.env  local_agents.yaml  run.sh  test.sh  workflow.yaml
maestro/deployments/: Dockerfile  api.py  deployment.yaml  maestro.html  maestro.sh  maestro.yaml  service.yaml
maestro/docs/: README_openai.md
maestro/maestro/: agent.py  agent_schema.json  bee_agent.py  crewai_agent.py  workflow.py
maestro/schemas/: agent_schema.json  tool_schema.json  workflow_schema.json
maestro/src/: __init__.py  agent_factory.py  agent_schema.json  bee_agent.py  crewai_agent.py  deploy.py  mermaid.py  mock_agent.py  step.py  workflow.py
maestro/src/agents/: agent.py  agent_factory.py  bee_agent.py  beeai_agent.py  beeai_local_agent.py  crewai_agent.py  maestro_agent.py  mock_agent.py  openai_agent.py
maestro/src/agents/maestro/: chat_client.py  tools_server.py
maestro/src/agents/meta_agent/: README.md  agents.yaml  doctor.sh  test.sh  workflow.yaml  workflow_agent.yaml  workflow_workflow.yaml
maestro/src/frameworks/: agent.py  beeai_agent.py  crewai_agent.py  openai_agent.py  remote_agent.py
maestro/src/meta_agent/: agents.yaml
maestro/test/examples/: condition_workflow.yaml
maestro/test/yamls/workflows/: conditional_workflow.yaml
maestro/tests/agents/: test_agent_factory.py
maestro/tests/agents/beeai/: test_bee.py
maestro/tests/agents/beeai_agent/: agents.yaml  test_beeai.py
maestro/tests/agents/crewai/: agents.yaml  crew_dummy.py  test_crewai.py  workflow.yaml
maestro/tests/agents/crewai_agent/: agents.yaml  test_crewai.py  workflow.yaml
maestro/tests/agents/maestro_agents/: agents.yaml  test_maestro.py  workflow.yaml
maestro/tests/agents/openai_agent/: agents.yaml  agents_mcp.yaml  workflow.yaml  workflow_mcp.yaml  workflow_ollama.yaml  workflow_ollama_mcp.yaml  workflow_search.yaml
maestro/tests/bee/: agents.yaml  test_bee.py  workflow.yaml
maestro/tests/cli/: test_commands.py
maestro/tests/crewai/: agents.yaml  test_crewai.py  workflow.yaml
maestro/tests/examples/: condition_agents.yaml  condition_workflow.yaml  test_condition.py  test_parallel.py
maestro/tests/integration/: test_dry_run.py
maestro/tests/integration/deploys/: kind-config.yaml  test_deploy.py
maestro/tests/integration/dry_run/: test_dry_run.py
maestro/tests/integration/mas_openai/: agents.yaml  test_mas_openai.py  workflow.yaml
maestro/tests/meta_agents/: simple_prompt.txt  weather_prompt.txt
maestro/tests/workflow/: pic.md  test_exception.py  test_loop.py  test_mermaid.py  test_parallel.py  test_sequence.py  workflow.yaml
maestro/tests/yamls/agents/: dry_run_paralle_agent.yaml  funnier_agents.yaml  funnier_local_agents.yaml  loop_agent.yaml  multi_agents.yaml  multi_agents_crew2.yaml  multi_agents_parallel.yaml  simple_agent.yaml  (+2 more)
maestro/tools/: check-schemas.sh  run-demos.sh  run-meta-agent.sh  run_workflow.py  workflow_schema.json
maestro/tools/cli/: beeAI.py
(+488 files in other folders)
