[project]
name = "maestro"
version = "0.1.0"
description = "A multi-agent platform with the vision to facilitate deploy and run AI agents."
authors = [
    {name = "IBM"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11,<3.13"

[project.scripts]
maestro = "maestro.cli.maestro:__run_cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["maestro*"]

[tool.pytest.ini_options]
addopts = "-v -s --ignore=framework"
