[tool.poetry]
name = "maestro"
version = "0.1.0"
description = "A multi-agent platform with the vision to facilitate deploy and run AI agents."
authors = ["IBM"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    {include = "src", from="."},
    {include = "cli", from="."},
]

[tool.poetry.dependencies]
python = ">= 3.11, < 3.13"
openai = "^1.61.1"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"
jsonschema = "^4.23.0"
docopt-ng = "^0.9.0"
langchain-community = "^0.3.16"
duckduckgo-search = "^7.3.0"
crewai = "^0.100.1"
crewai-tools = "^0.33.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v -s --ignore=framework"

[tool.poetry.scripts]
"maestro" = "cli.maestro:__run_cli"