[tool.poetry]
name = "bee_agent"
version = "0.1.0"
description = ""
authors = ["IBM"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.11, < 3.13"
pydantic = "^2.10"
requests = "^2.32"
pylint = "^3.3.2"
pydantic-settings = "^2.6.1"
chevron = "^0.14.0"
types-requests = "^2.32.0.20241016"
litellm = "^1.55.3"
aiofiles = "^24.1.0"
pyventus = "^0.6.0"

[tool.poetry.group.dev.dependencies]
tox = "^4.20"
black = "^24.0"
mypy = "^1.13"
ruff = "^0.6.7"
pylint = "^3.3.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lint = "tools.scripts:lint"
commit = "tools.scripts:commit"