[tool.poetry]
name = "bee_agent"
version = "0.1.0"
description = ""
authors = ["IBM"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.11, < 3.13"
pydantic = "^2.10"
requests = "^2.32"
pylint = "^3.3.2"
pydantic-settings = "^2.6.1"
chevron = "^0.14.0"
types-requests = "^2.32.0.20241016"
litellm = "^1.55.3"
aiofiles = "^24.1.0"
pyventus = "^0.6.0"
mcp = "^1.2.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"

[tool.poetry.group.dev.dependencies]
tox = "^4.20"
black = "^24.0"
mypy = "^1.13"
ruff = "^0.6.7"
pylint = "^3.3.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lint = "dev_tools.scripts:lint"
commit = "dev_tools.scripts:commit"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "strict"

[tool.pytest-asyncio]
asyncio_mode = "strict"
default_fixture_loop_scope = "function"